fix dictionary word list, add word create service
